--- a/brewery_main.html
+++ b/brewery_main.html
@@ -17,24 +17,13 @@
       </header>
 
       <div class="beer">
-        <h2>Rich and Malty <sup><img src="img/q.png" alt="Information"></sup></h2>
-        <figure>
-          <img src="img/beer.png" alt="Name of Beer">
-          <figcaption>Name of Beer</figcaption>
-        </figure>
-        <img src="img/beer.png" alt="Filters">
-        <img src="img/beer.png" alt="Filters">
-        <h2>Crisp and Bright <sup><img src="img/q.png" alt="Information"></sup></h2>
-        <img src="img/beer.png" alt="Filters">
-        <img src="img/beer.png" alt="Filters">
-        <img src="img/beer.png" alt="Filters">
-        <h2>Hops & More Hops <sup><img src="img/q.png" alt="Information"></sup></h2>
-        <img src="img/beer.png" alt="Filters">
-        <img src="img/beer.png" alt="Filters">
-        <img src="img/beer.png" alt="Filters">
+        <h2>Rich and Malty</h2>
+          <img src="img/q.png">
+        <h2>Crisp and Bright</h2>
+          <img src="img/q.png">
+        <h2>Hops & More Hops</h2>
+          <img src="img/q.png">
       </div>
-
-      <img id="f" src="img/filter.png" alt="Filters">
 
     <hr />
     <nav>
