--- a/brewery_main.html
+++ b/brewery_main.html
@@ -13,28 +13,52 @@
 
   <body>
       <header>
-        <h1 class="brewery-header">Ballast Point Brewing Co.</h1>
+        <p class="brewery-header">Ballast Point Brewing Co.</p>
       </header>
 
-      <div class="beer">
-        <h2>Rich and Malty <sup><img src="img/q.png" alt="Information"></sup></h2>
-        <figure>
-          <img src="img/beer.png" alt="Name of Beer">
-          <figcaption>Name of Beer</figcaption>
-        </figure>
-        <img src="img/beer.png" alt="Filters">
-        <img src="img/beer.png" alt="Filters">
-        <h2>Crisp and Bright <sup><img src="img/q.png" alt="Information"></sup></h2>
-        <img src="img/beer.png" alt="Filters">
-        <img src="img/beer.png" alt="Filters">
-        <img src="img/beer.png" alt="Filters">
-        <h2>Hops & More Hops <sup><img src="img/q.png" alt="Information"></sup></h2>
-        <img src="img/beer.png" alt="Filters">
-        <img src="img/beer.png" alt="Filters">
-        <img src="img/beer.png" alt="Filters">
-      </div>
+        <p class="btype">Rich and Malty <sup><img id="qm" src="img/question.png" alt="Information"></sup></p>
+        <div class="row">
+          <figure>
+            <a href="beer.html"><img class="beer" src="img/ballastpoint/rich-malty/01-sculpin-ipa.png" alt="Name of Beer"></a>
+            <figcaption>Sculpin IPA</figcaption>
+          </figure>
+          <figure>
+            <a href="beer.html"><img class="beer" src="img/ballastpoint/rich-malty/02-manta-ray-ipa.png" alt="Name of Beer"></a>
+            <figcaption>Manta Ray IPA</figcaption>
+          </figure>
+          <figure>
+            <a href="beer.html"><img class="beer" src="img/ballastpoint/rich-malty/03-fathom-ipa.png" alt="Name of Beer"></a>
+            <figcaption>Fathom IPA</figcaption>
+          </figure>
+        </div>
+        <div class="row">
+          <figure>
+            <a href="beer.html"><img class="beer" src="img/ballastpoint/rich-malty/04-gf-sculpin-ipa.png" alt="Name of Beer"></a>
+            <figcaption>GF Sculpin IPA</figcaption>
+          </figure>
+          <figure>
+            <a href="beer.html"><img class="beer" src="img/ballastpoint/rich-malty/05-melon-dorado.png" alt="Name of Beer"></a>
+            <figcaption>Melon Dorado</figcaption>
+          </figure>
+        </div>
+        <p class="btype">Crisp and Bright <sup><img id="qm" src="img/question.png" alt="Information"></sup></p>
+        <div class="row">
+          <figure>
+            <a href="beer.html"><img class="beer" src="img/ballastpoint/crisp-clear/01-longfin-lager.png" alt="Name of Beer"></a>
+            <figcaption>Longfin Lager</figcaption>
+          </figure>
+          <figure>
+            <a href="beer.html"><img class="beer" src="img/ballastpoint/crisp-clear/02-ca-kolsch.png" alt="Name of Beer"></a>
+            <figcaption>CA Kölsch</figcaption>
+          </figure>
+          <figure>
+            <a href="beer.html"><img class="beer" src="img/ballastpoint/crisp-clear/03-bb.png" alt="Name of Beer"></a>
+            <figcaption>Bonito Blonde</figcaption>
+          </figure>
+        </div>
+        <p class="btype">Hops & More Hops <sup><img id="qm" src="img/question.png" alt="Information"></sup></p>
 
-      <img id="f" src="img/filter.png" alt="Filters">
+      <a href="filter.html"><img id="f" src="img/filter.png" alt="Filters"></a>
 
     <hr />
     <nav>
