--- a/brewery_main.html
+++ b/brewery_main.html
@@ -58,7 +58,7 @@
         </div>
         <p class="btype">Hops & More Hops <sup><img id="qm" src="img/question.png" alt="Information"></sup></p>
 
-      <a href="filter.html"><img id="f" src="img/filter.png" alt="Filters"></a>
+      <a href="filter.html"><img id="f" src="img/filtershadow.png" alt="Filters"></a>
 
     <hr />
     <nav>
