added favorite and revised nav

--- a/breweries.html
+++ b/breweries.html
@@ -13,39 +13,39 @@
   <body>
     <h1>Where Are You Located?</h1>
     <select id="locations">
-      <option></option>
+      <option>All</option>
       <option value="lajolla">La Jolla</option>
       <option value="sandiego">San Diego</option>
       <option value="irvine">Irvine</option>
       <option value="newyork">New York</option>
     </select>
-    <p id="locationname">Choose a brewery</p>
+    <h1>Choose a brewery</h1>
 
     <div>
     <div class="brewery-list">
       <div class="brewery lajolla">
-        <a href="index.html">
+        <a href="beer.html">
           <img src="img/brewery1.png">
         </a>
         <p>La Jolla Brewery</p>
       </div>
  
       <div class="brewery lajolla">
-        <a href="index.html">
+        <a href="beer.html">
           <img src="img/brewery1.png">
         </a>
         <p>UCSD Unofficial Brewery</p>
       </div>
 
        <div class="brewery sandiego">
-        <a href="index.html">
+        <a href="beer.html">
           <img src="img/brewery1.png">
         </a>
         <p>San Diego Brewery</p>
       </div>
  
       <div class="brewery newyork">
-        <a href="index.html">
+        <a href="beer.html">
           <img src="img/brewery1.png">
         </a>
         <p>New York Brewery</p>
@@ -57,11 +57,12 @@
     <hr />
     <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-					<li><a href="breweries.html">Choose Brewery</a></li>
+					<li><a href="breweries.html">Choose A Brewery</a></li>
           <li><a href="brewery_main.html">Brewery Main Page</a></li>
 					<li><a href="filter.html">Filters</a></li>
-          <li><a href="beer.html">Beer Page</a></li>
+          <li><a href="beer.html">Beer Info Page</a></li>
+          <li><a href="favorite.html">Favorite Page</a></li>
+          <li><a href="index.html">Log out</a></li>
         </ul>
     </nav>
 
