--- a/brewery_main.html
+++ b/brewery_main.html
@@ -11,7 +11,7 @@
     -->
   </head>
 
-  <body>
+  <body class="beer-body">
       <header>
         <p class="brewery-header">Ballast Point Brewing Co.</p>
       </header>
