--- a/breweries.html
+++ b/breweries.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <h1>Where Are You Located?</h1>
+    <h1 class="brewery-title">Where Are You Located?</h1>
     <select id="locations">
       <option>All</option>
       <option value="lajolla">La Jolla</option>
@@ -19,36 +19,63 @@
       <option value="irvine">Irvine</option>
       <option value="newyork">New York</option>
     </select>
-    <h1>Choose a brewery</h1>
+    <h1 class="brewery-title">Choose a brewery</h1>
 
     <div>
     <div class="brewery-list">
       <div class="brewery lajolla">
-        <a href="beer.html">
-          <img src="img/brewery1.png">
+        <a href="brewery_main.html">
+          <img src="img/locations/01-bp.png">
         </a>
-        <p>La Jolla Brewery</p>
+        <p>Ballast Point</p>
+        <p>9045 Carroll Way</p>
       </div>
  
       <div class="brewery lajolla">
-        <a href="beer.html">
-          <img src="img/brewery1.png">
+        <a href="brewery_main.html">
+          <img src="img/locations/02-df.png">
         </a>
-        <p>UCSD Unofficial Brewery</p>
+        <p>Duck Foot</p>
+        <p>8920 Kenmar Dr #210</p>
       </div>
 
-       <div class="brewery sandiego">
-        <a href="beer.html">
+      <div class="brewery lajolla">
+        <a href="brewery_main.html">
+          <img src="img/locations/03-gf.png">
+        </a>
+        <p>Green Flash</p>
+        <p>6550 Mira Mesa Blvd</p>
+      </div>
+ 
+      <div class="brewery lajolla">
+        <a href="brewery_main.html">
+          <img src="img/locations/04-mh.png">
+        </a>
+        <p>Mike Hess</p>
+        <p>7955 Silverton Ave #1201</p>
+      </div>
+
+      <div class="brewery sandiego">
+        <a href="brewery_main.html">
           <img src="img/brewery1.png">
         </a>
         <p>San Diego Brewery</p>
+        <p>1234 Fake Address Dr</p>
+      </div>
+      <div class="brewery irvine">
+        <a href="brewery_main.html">
+          <img src="img/brewery1.png">
+        </a>
+        <p>UCI Brewery</p>
+        <p>1212 Fake Again Dr</p>
       </div>
  
       <div class="brewery newyork">
-        <a href="beer.html">
+        <a href="brewery_main.html">
           <img src="img/brewery1.png">
         </a>
         <p>New York Brewery</p>
+        <p>7777 Also Fake Dr</p>
       </div>
     </div>
     </div>
