--- a/breweries.html
+++ b/breweries.html
@@ -19,6 +19,8 @@
       <option value="irvine">Irvine</option>
       <option value="newyork">New York</option>
     </select>
+
+    <br>
     <h1 class="brewery-title">Choose a brewery</h1>
 
     <div>
@@ -27,7 +29,7 @@
         <a href="brewery_main.html">
           <img src="img/locations/01-bp.png">
         </a>
-        <p>Ballast Point</p>
+        <h3>Ballast Point</h3>
         <p>9045 Carroll Way</p>
       </div>
  
@@ -35,7 +37,7 @@
         <a href="brewery_main.html">
           <img src="img/locations/02-df.png">
         </a>
-        <p>Duck Foot</p>
+        <h3>Duck Foot</h3>
         <p>8920 Kenmar Dr #210</p>
       </div>
 
@@ -43,15 +45,15 @@
         <a href="brewery_main.html">
           <img src="img/locations/03-gf.png">
         </a>
-        <p>Green Flash</p>
+        <h3>Green Flash</h3>
         <p>6550 Mira Mesa Blvd</p>
       </div>
  
       <div class="brewery lajolla">
         <a href="brewery_main.html">
-          <img src="img/locations/04-mh.png">
+          <img src="img/brewery1.png">
         </a>
-        <p>Mike Hess</p>
+        <h3>Mike Hess</h3>
         <p>7955 Silverton Ave #1201</p>
       </div>
 
@@ -59,14 +61,14 @@
         <a href="brewery_main.html">
           <img src="img/brewery1.png">
         </a>
-        <p>San Diego Brewery</p>
+        <h3>San Diego Brewery</h3>
         <p>1234 Fake Address Dr</p>
       </div>
       <div class="brewery irvine">
         <a href="brewery_main.html">
           <img src="img/brewery1.png">
         </a>
-        <p>UCI Brewery</p>
+        <h3>UCI Brewery</h3>
         <p>1212 Fake Again Dr</p>
       </div>
  
@@ -74,7 +76,7 @@
         <a href="brewery_main.html">
           <img src="img/brewery1.png">
         </a>
-        <p>New York Brewery</p>
+        <h3>New York Brewery</h3>
         <p>7777 Also Fake Dr</p>
       </div>
     </div>
