link css for favorite and login page

--- a/favorite.html
+++ b/favorite.html
@@ -4,6 +4,7 @@
     <title>Beermenter</title>
     <base href="https://justinschen.github.io/Beermenter/" />
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/beermenter.css">
     <!--
     <link rel="shortcut icon" href="assets/img/icon.png" />
     <link rel="stylesheet" type="text/css" href="css/under_dev.css">
