--- a/beer.html
+++ b/beer.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Beermenter</title>
+    <link rel="icon" href="http://example.com/favicon.png">
     <!-- delete base if there is 404 error when linking to css or script, by etsu -->
     <base href="https://justinschen.github.io/Beermenter/" />
     <meta charset="UTF-8">
