--- a/favorite.html
+++ b/favorite.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Beermenter</title>
+    <link rel="icon" href="img/favicon.ico">
     <base href="https://justinschen.github.io/Beermenter/" />
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/beermenter.css">
