--- a/brewery_main.html
+++ b/brewery_main.html
@@ -3,13 +3,10 @@
   <head>
     <title>Beermenter</title>
     <link rel="icon" href="img/favicon.ico">
-    <!--<base href="https://justinschen.github.io/Beermenter/" />-->
+    <base href="https://justinschen.github.io/Beermenter/" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/beermenter.css">
-    <!--
-    <link rel="shortcut icon" href="assets/img/icon.png" />
-    -->
   </head>
 
   <body class="beer-body">
