--- a/beer.html
+++ b/beer.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <title>Beermenter</title>
-    <link rel="icon" href="img/favicon.ico">
     <!-- delete base if there is 404 error when linking to css or script, by etsu -->
     <base href="https://justinschen.github.io/Beermenter/" />
     <meta charset="UTF-8">
@@ -20,12 +19,11 @@
     <hr />
     <nav>
         <ul>
-          <li><a href="breweries.html">Choose A Brewery</a></li>
+          <li><a href="index.html">Home</a></li>
+					<li><a href="breweries.html">Choose Brewery</a></li>
           <li><a href="brewery_main.html">Brewery Main Page</a></li>
-          <li><a href="filter.html">Filters</a></li>
-          <li><a href="beer.html">Beer Info Page</a></li>
-          <li><a href="favorite.html">Favorite Page</a></li>
-          <li><a href="index.html">Log out</a></li>
+					<li><a href="filter.html">Filters</a></li>
+          <li><a href="beer.html">Beer Page</a></li>
         </ul>
     </nav>
   </body>
