--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Beermenter</title>
     <link rel="icon" href="img/favicon.ico">
-    <base href="https://justinschen.github.io/Beermenter/" />
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/beermenter.css">
     <!--
     <link rel="shortcut icon" href="assets/img/icon.png" />
@@ -12,10 +12,23 @@
     -->
   </head>
 
-  <body>
-    <header>
-      <h1>Login page</h1>
-    </header>
-    <a href="breweries.html">login</a>
+  <body class="index-body">
+    <div class="index-title">Beermenter</div>
+
+    <img class="logo" src="img/favicon.ico"/>
+
+    <form>
+      <input id="username" type="text" name="username" class="textfield" placeholder="Username">
+      <br>
+      <input id="password" type="password" name="password" class="textfield" placeholder="Password">
+      <input id="confirm" type="password" name="confirm" class="textfield" placeholder="Confirm Password">
+    </form>
+    <div id="login-signup-btn" class="div-btn">Log In</div>
+    <div style="display: flex;justify-content: center;align-items: center;">
+      <div class="div-btn switch-mode" data-switch="login">Don't have an account? Sign up</div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
