moved data to data.js and updated html/js according to data

--- a/brewery_main.html
+++ b/brewery_main.html
@@ -137,7 +137,6 @@
         </div>
       </div>
 
-      <hr />
       <div class="sidenav">
         <a href="#!" class="close-nav">&times;</a>
         <a href="breweries.html">Choose A Brewery</a>
@@ -148,6 +147,7 @@
       <a class="open-nav">&#9776; menu</a>
 
       <script src="https://code.jquery.com/jquery.js"></script>
+    <script type="text/javascript" src="js/data.js"></script>
       <script type="text/javascript" src="js/brewery_main.js"></script>
   </body>
 </html>
