--- a/breweries.html
+++ b/breweries.html
@@ -15,75 +15,17 @@
     <h1 class="brewery-title">Where Are You Located?</h1>
     <select id="locations">
       <option value="all">All</option>
-      <option value="lajolla">La Jolla</option>
-      <option value="sandiego">San Diego</option>
-      <option value="irvine">Irvine</option>
-      <option value="newyork">New York</option>
+      <!-- to be filled -->
     </select>
 
     <h1 class="brewery-title">Choose a brewery</h1>
 
     <div>
     <div class="brewery-list">
-      <div class="brewery lajolla">
-        <a href="brewery_main.html">
-          <img src="img/locations/01-bp.png">
-        </a>
-        <h3>Ballast Point</h3>
-        <p>9045 Carroll Way</p>
-      </div>
- 
-      <div class="brewery lajolla">
-        <a href="brewery_main.html">
-          <img src="img/locations/02-df.png">
-        </a>
-        <h3>Duck Foot</h3>
-        <p>8920 Kenmar Dr #210</p>
-      </div>
-
-      <div class="brewery lajolla">
-        <a href="brewery_main.html">
-          <img src="img/locations/03-gf.png">
-        </a>
-        <h3>Green Flash</h3>
-        <p>6550 Mira Mesa Blvd</p>
-      </div>
- 
-      <div class="brewery lajolla">
-        <a href="brewery_main.html">
-          <img src="img/brewery1.png">
-        </a>
-        <h3>Mike Hess</h3>
-        <p>7955 Silverton Ave #1201</p>
-      </div>
-
-      <div class="brewery sandiego">
-        <a href="brewery_main.html">
-          <img src="img/brewery1.png">
-        </a>
-        <h3>San Diego Brewery</h3>
-        <p>1234 Fake Address Dr</p>
-      </div>
-      <div class="brewery irvine">
-        <a href="brewery_main.html">
-          <img src="img/brewery1.png">
-        </a>
-        <h3>UCI Brewery</h3>
-        <p>1212 Fake Again Dr</p>
-      </div>
- 
-      <div class="brewery newyork">
-        <a href="brewery_main.html">
-          <img src="img/brewery1.png">
-        </a>
-        <h3>New York Brewery</h3>
-        <p>7777 Also Fake Dr</p>
-      </div>
+      <!-- to be filled -->
     </div>
     </div>
 
-
-    <hr />
 
     <div class="sidenav">
       <a href="#!" class="close-nav">&times;</a>
@@ -92,9 +34,11 @@
       <a href="favorite.html">Favorite Page</a>
       <a href="index.html">Log out</a>
     </div>
+
     <a class="open-nav">&#9776; menu</a>
 
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script type="text/javascript" src="js/data.js"></script>
     <script type="text/javascript" src="js/breweries.js"></script>
   </body>
 </html>
