dynamic brewery name

--- a/brewery_main.html
+++ b/brewery_main.html
@@ -12,7 +12,7 @@
 
   <body class="beer-body">
       <header>
-        <p class="brewery-header">Ballast Point Brewing Co.</p>
+        <p class="brewery-header"><!-- to be filled --></p>
       </header>
 
         <div id="ipasection" class="category">
