added green flash, refined favorite.js, linked to google map

--- a/favorite.html
+++ b/favorite.html
@@ -31,7 +31,7 @@
           <p class="btype">Porter <sup><img class="qm" id="qm4" src="img/question.png" alt="Information"></sup></p>
         </div>
         <div id="blondesection" class="category">
-          <p class="btype">Blonde <sup><img class="qm" id="qm5" src="img/question.png" alt="Information"></sup></p>
+          <p class="btype">Blonde Ale <sup><img class="qm" id="qm5" src="img/question.png" alt="Information"></sup></p>
         </div>
 
       <div id="modals"></div>
