--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body class="index-body">
     <div class="index-title">Beermenter</div>
 
-    <img class="logo" src="img/favicon.ico"/>
+    <img class="logo" src="img/logo.png"/>
 
     <form>
       <input id="username" type="text" name="username" class="textfield" placeholder="Username">
