--- a/breweries.html
+++ b/breweries.html
@@ -35,7 +35,7 @@
       <a href="index.html">Log out</a>
     </div>
 
-    <a class="open-nav">&#9776; menu</a>
+    <a class="open-nav">&#9776;</a>
 
     <script src="https://code.jquery.com/jquery.js"></script>
     <script type="text/javascript" src="js/data.js"></script>
