--- a/favorite.html
+++ b/favorite.html
@@ -74,7 +74,7 @@
       <a href="favorite.html">Favorite Page</a>
       <a href="index.html">Log out</a>
     </div>
-    <a class="open-nav">&#9776; menu</a>
+    <a class="open-nav">&#9776;</a>
 
     <script src="https://code.jquery.com/jquery.js"></script>
     <script type="text/javascript" src="js/data.js"></script>
