--- a/brewery_main.html
+++ b/brewery_main.html
@@ -43,17 +43,17 @@
             <div id="filterContainer">
               <div class="ck-button">
                 <label>
-                  <input class="btn" type="checkbox" value="kolsch" id="filter-kolsch"><span>Kolsch</span>
+                  <input id="f0" class="btn" type="checkbox" value="kolsch" id="filter-kolsch"><span>Kolsch</span>
                 </label>
               </div>
               <div class="ck-button">
                 <label>
-                  <input class="btn" type="checkbox" value="lager" id="filter-lager"><span>Lager</span>
+                  <input id="f1" class="btn" type="checkbox" value="lager" id="filter-lager"><span>Lager</span>
                 </label>
               </div>
               <div class="ck-button">
                 <label>
-                  <input class="btn" type="checkbox" value="ipa" id="filter-ipa"><span>India Pale Ale</span>
+                  <input id="f2" class="btn" type="checkbox" value="ipa" id="filter-ipa"><span>India Pale Ale</span>
                 </label>
               </div>
             </div>
@@ -62,37 +62,37 @@
             <summary>Characteristic &#x2295;</summary>
             <div class="ck-button">
               <label>
-                <input class="btn" type="checkbox" value="ipa" id="filter-crisp"><span>Crisp</span>
+                <input id="f3" class="btn" type="checkbox" value="crisp" id="filter-crisp"><span>Crisp</span>
               </label>
             </div>
             <div class="ck-button">
               <label>
-                <input class="btn" type="checkbox" value="ipa" id="filter-fruity"><span>Fruity</span>
+                <input id="f4" class="btn" type="checkbox" value="fruity" id="filter-fruity"><span>Fruity</span>
               </label>
             </div>
             <div class="ck-button">
               <label>
-                <input class="btn" type="checkbox" value="ipa" id="filter-hop"><span>Hop</span>
+                <input id="f5" class="btn" type="checkbox" value="hop" id="filter-hop"><span>Hop</span>
               </label>
             </div>
             <div class="ck-button">
               <label>
-                <input class="btn" type="checkbox" value="ipa" id="filter-malt"><span>Malt</span>
+                <input id="f6" class="btn" type="checkbox" value="malt" id="filter-malt"><span>Malt</span>
               </label>
             </div>
             <div class="ck-button">
               <label>
-                <input class="btn" type="checkbox" value="ipa" id="filter-roasted"><span>Roasted</span>
+                <input id="f7" class="btn" type="checkbox" value="roasted" id="filter-roasted"><span>Roasted</span>
               </label>
             </div>
             <div class="ck-button">
               <label>
-                <input class="btn" type="checkbox" value="ipa" id="filter-smoky"><span>Smoky</span>
+                <input id="f8" class="btn" type="checkbox" value="smoky" id="filter-smoky"><span>Smoky</span>
               </label>
             </div>
             <div class="ck-button">
               <label>
-                <input class="btn" type="checkbox" value="ipa" id="filter-tart"><span>Tart</span>
+                <input id="f9" class="btn" type="checkbox" value="tart" id="filter-tart"><span>Tart</span>
               </label>
             </div>
           </details>
