--- a/brewery_main.html
+++ b/brewery_main.html
@@ -11,7 +11,7 @@
   </head>
 
   <body class="beer-body">
-      <header>
+      <header class="brewery-header-container">
         <p class="brewery-header"><!-- to be filled --></p>
       </header>
 
