menu changed and added many redesign files

--- a/brewery_main2.html
+++ b/brewery_main2.html
@@ -142,14 +142,10 @@
         </div>
       </div>
 
-      <div class="sidenav">
-        <a href="#!" class="close-nav">&times;</a>
-        <a href="breweries.html">Choose A Brewery</a>
-        <a href="brewery_main.html">Brewery Main Page</a>
-        <a href="favorite.html">Favorite Page</a>
-        <a href="index.html">Log out</a>
+      <div class="navbar">
+        <a href="breweries2.html" class="active">Brewery</a>
+        <a href="favorite2.html">My Library</a>
       </div>
-      <a class="open-nav">&#9776;</a>
 
       <script src="https://code.jquery.com/jquery.js"></script>
     <script type="text/javascript" src="js/data.js"></script>
