--- a/favorite2.html
+++ b/favorite2.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="img/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/beermenter.css">
+    <link rel="stylesheet" href="css/beermenter2.css">
     <link rel="stylesheet" href="css/beerinfo.css">
     <!--
     <link rel="shortcut icon" href="assets/img/icon.png" />
@@ -67,14 +67,12 @@
         </div>
       </div>
 
-    <div class="sidenav">
-      <a href="#!" class="close-nav">&times;</a>
-      <a href="breweries.html">Choose A Brewery</a>
-      <a href="brewery_main.html">Brewery Main Page</a>
-      <a href="favorite.html">Favorite Page</a>
-      <a href="index.html">Log out</a>
+    <div class="navbar">
+      <a href="breweries2.html">Brewery</a>
+      <a href="#" class="active">My Library</a>
     </div>
-    <a class="open-nav">&#9776;</a>
+
+    <div style="cursor: pointer;" onclick="window.location='index2.html';" class="logout-btn">Log Out</div>
 
     <script src="https://code.jquery.com/jquery.js"></script>
     <script type="text/javascript" src="js/data.js"></script>
